changes color layout

--- a/canvas-bubble-mousehover.html
+++ b/canvas-bubble-mousehover.html
@@ -14,6 +14,7 @@
         canvas {
             width: 100%;
             height: 100%;
+            background: linear-gradient(45deg, #4e8696, #70acc1);
         }
     </style>
 </head>
@@ -32,8 +33,24 @@
         var mouseX;
         var mouseY;
 
-        window.addEventListener('mousemove', mousemove);
+        var colorArray = [
+        "#0A2459",
+        "#0D2F73",
+        "#16558C",
+        "#147CA6",
+        "#36B1BF",
+        "#43CAD9",
+        "#B6F2F2",
+        "#F2F2F2",
+        "#FFFFFF",
+        "#B7E8C4",
+        "#CBFFC9",
+        "#B7E8E0",
 
+        ]
+
+        window.addEventListener('mousemove', mousemove);
+        
         function mousemove(e) {
             mouseX = e.x;
             mouseY = e.y;
@@ -48,12 +65,12 @@
         })
 
         function Circle(x, y, dx, dy, radius) {
-            this.getRandomColor = function () {
-                var color =
-                    `rgba(${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() + 0.1 })`;
-                console.log(color);
-                return color;
-            }
+            // this.getRandomColor = function () {
+            //     var color =
+            //         `rgba(${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() * 255}, ${Math.random() + 0.1 })`;
+            //     console.log(color);
+            //     return color;
+            // }
 
             this.x = x;
             this.y = y;
@@ -61,7 +78,8 @@
             this.dy = dy;
             this.radius = radius;
             this.minRadius = radius;
-            this.fiilColor = this.getRandomColor();
+            //this.fiilColor = this.getRandomColor(); //function use
+            this.fiilColor = colorArray[Math.floor(Math.random() * colorArray.length)];
 
 
             this.draw = function () {
